<resources>
    <string name="app_name">RestRate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RestRate</string>
    <string name="nav_header_subtitle">Tal and Lior</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="restaurant_list">Restaurant List</string>
    <string name="restaurant_info">Restaurant Info</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="add_review">Add Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="edit_restaurant">Edit Restaurant</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="edit">Edit</string>
    <string name="register">Register</string>
    <string name="register_full_name">Full name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="register_register_btn">Register</string>
    <string name="register_cancel_btn">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Search</string>
    <string name="login_login_btn">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_new"><u>New User?</u></string>
    <string name="profile_my_reviews"><u>My reviews:</u></string>

    <string-array name="cost_options">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
    </string-array>
</resources>