<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/restaurantListFragment">

    <fragment
        android:id="@+id/restaurantListFragment"
        android:name="com.example.restrate.restaurant.RestaurantListFragment"
        android:label="@string/restaurant_list"
        tools:layout="@layout/fragment_restaurant_list">
        <action
            android:id="@+id/action_restaurantListFragment_to_addRestaurantFragment"
            app:destination="@id/addRestaurantFragment" />
        <action
            android:id="@+id/action_restaurantListFragment_to_restaurantInfoFragment"
            app:destination="@id/restaurantInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/addRestaurantFragment"
        android:name="com.example.restrate.restaurant.AddRestaurantFragment"
        android:label="@string/add_restaurant"
        tools:layout="@layout/fragment_add_restaurant">
        <action
            android:id="@+id/action_addRestaurant_to_restaurantInfo"
            app:destination="@id/restaurantInfoFragment"
            app:popUpTo="@id/restaurantListFragment" />
    </fragment>
    <fragment
        android:id="@+id/restaurantInfoFragment"
        android:name="com.example.restrate.restaurant.RestaurantInfoFragment"
        android:label="@string/restaurant_info"
        tools:layout="@layout/fragment_restaurant_info" >
        <argument
            android:name="restaurantId"
            app:argType="string" />
        <action
            android:id="@+id/action_restaurantInfoFragment_to_editRestaurantFragment"
            app:destination="@id/editRestaurantFragment" />
    </fragment>
    <fragment
        android:id="@+id/editRestaurantFragment"
        android:name="com.example.restrate.restaurant.EditRestaurantFragment"
        android:label="@string/edit_restaurant"
        tools:layout="@layout/fragment_edit_restaurant">
        <argument
            android:name="restaurantId"
            app:argType="string" />
        <action
            android:id="@+id/action_editRestaurantFragment_to_restaurantInfoFragment"
            app:destination="@id/restaurantInfoFragment"
            app:popUpTo="@id/restaurantListFragment"/>
    </fragment>
</navigation>